--- a/index.html
+++ b/index.html
@@ -10,7 +10,10 @@
 </td>
 </tr>
 <tr>
-<td width=18% align="center">
+<td align=center>
+<iframe width=650 height=420 name="obszar_glowny" src="glowny_twoje_nazwisko.html" border="0"></iframe>
+<b>obszar główny</b>
+</td>
 <b>lewe menu</b>
 </td>
 <td align=center>
