--- a/index.html
+++ b/index.html
@@ -1,33 +1,26 @@
+<!DOCTYPE html>
 <html>
-<head>
-<meta charset="utf-8">
-</head>
+  <head>
+	  <meta charset="utf-8">
+  </head>
 <body>
-<table width=65% border="1" align="center">
+	<table width=95% border="1" align="center">
 <tr>
-<td colspan="3">
-<b>nagłówek</b>, 3-kolumny scalone
-</td>
-</tr>
-<tr>
-<td align=center>
-<iframe width=650 height=420 name="obszar_glowny" src="glowny_twoje_nazwisko.html" border="0"></iframe>
-<b>obszar główny</b>
-</td>
-<b>lewe menu</b>
-</td>
-<td align=center>
-<b>obszar główny</b>
-</td>
 <td width=18% align="center">
-<b>prawe menu</b>
+	<a href="http://www.kuratorium.gda.pl" target="strony">Kuratorium</a>
+<br>
+	<a href="http://www.zse.gda.pl" target="strony">ZSE Gdańsk</a>
 </td>
-</tr>
-<tr>
-<td colspan="3">
-<b>stopka</b>, 3-kolumny scalone
-</td>
+    <td align=center><iframe width=650 height=650 name="strony" src="start.html" border="0"></iframe>
+  </td>
+	  <td width=18% align="center"><a href="start.html" target="strony">Start</a>
+  </td>
 </tr>
 </table>
 </body>
 </html>
+Footer
+© 2023 GitHub, Inc.
+Footer navigation
+Terms
+Pri
