--- a/start.html
+++ b/start.html
@@ -1,9 +1,9 @@
-﻿<html>
-<head>
-<meta charset="utf-8">
-</head>
+<html>
+  <head>
+    <meta charset="utf-8">
+  </head>
 <body>
-<h1 align="center">13 Tech. Gdańsk<br>przyjazna szkoła<br>Gdańsk, 24 lutego 2014 r.</h1>
-<marquee bgcolor="red">Pozdrowienia</marquee>
+  <h1 align="center">13 Tech. Gdańsk<br>przyjazna szkoła<br>Gdańsk, 24 lutego 2014 r.</h1>
+  <marquee bgcolor="red"><img src="https://avatars.githubusercontent.com/u/113313038?v=4"></img></marquee>
 </body>
 </html>
