--- a/index.html
+++ b/index.html
@@ -1,30 +1,62 @@
+<!DOCTYPE html>
 <html>
 <head>
-<meta charset="utf-8">
+    <meta charset="utf-8">
 </head>
 <body>
-<table width=65% border="1" align="center">
-<tr>
-<td colspan="3">
-<b>nagłówek</b>, 3-kolumny scalone
-</td>
-</tr>
-<tr>
-<td width=18% align="center">
-<a href="http://www.kuratorium.gda.pl" target="strony">Kuratorium</a>
-<br>
-<a href="http://www.zse.gda.pl" target="strony">ZSE Gdańsk</a>
-</td>
-<td align=center><iframe width=650 height=650 name="strony" src="start.html" border="0"></iframe>
-</td>
-<td width=18% align="center"><a href="start.html" target="strony">Start</a>
-</td>
-</tr>
-<tr>
-<td colspan="3">
-<b>stopka</b>, 3-kolumny scalone
-</td>
-</tr>
+<table width=95% border="1" align="center">
+    <tr>
+        <td colspan="3">
+            <iframe width=900 height=90 name="obszar_logo" src="logokropacz.html" border="0"></iframe>
+            </td>
+    </tr>
+    <tr>
+        <td width=18% align="center">
+            <b>lewe menu</b>
+          <ul>
+             <li>
+                <a href="http://www.kuratorium.gda.pl" target="obszar_glowny">Kuratorium</a>
+             </li>
+             <li>
+                 <a href="http://www.zse.gda.pl" target="obszar_glowny">ZSE Gdansk</a>
+             </li>
+             <li>
+                <a href="https://www.edu.gdansk.pl" target="obszar_glowny">Gpe</a>
+             </li>
+             <li>
+                 <a href="https://www.netflix.com/pl/" target="obszar_glowny">Netflix</a>
+             </li>    
+        </td>
+        <td align=center>
+            <iframe  width=650 height=650 name="obszar_glowny" src="glownykropacz.html" border="0"></iframe>
+        </td>
+        <td width=18% align="center">
+            <b>prawe menu</b>
+            <ul>
+            <li>
+                <a href="https://bartex23.github.io/zadanie/Poczta_Kropacz.html" target="obszar_glowny">Poczta</a>
+            </li>
+            <li>
+                <a href="https://bartex23.github.io/zadanie/Formularz_Kropacz.html" target="obszar_glowny" target="obszar_glowny">Formularz</a>
+            </li>
+            <li>
+            <a href="https://bartex23.github.io/zadanie/Tabela_Kropacz.html" target="obszar_glowny" target="obszar_glowny">tabela</a>
+            </li>
+            <li>
+                <a href="https://bartex23.github.io/zadanie/Plik_Kropacz.html" target="obszar_glowny">plik</a>
+            </li>
+            <li>
+                <a href="https://bartex23.github.io/zadanie/index.html" target="obszar_glowny">strona glowna</a>
+            </li>
+            </ul>
+            
+        </td>
+    </tr>
+    <tr>
+        <td colspan="3">
+            <iframe width=900 height=90 name="obszar_stopka" src="stopkakropacz.html" border="0"></iframe>
+            </td>
+    </tr>
 </table>
 </body>
 </html>
