--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                 <a href="https://www.edu.gdansk.pl" target="obszar_glowny">Gpe</a>
              </li>
              <li>
-                 <a href="https://www.netflix.com/pl/" target="obszar_glowny">Netflix</a>
+                 <a href="https://www.cda.pl" target="obszar_glowny">CDA</a>
              </li>    
         </td>
         <td align=center>
@@ -34,19 +34,19 @@
             <b>prawe menu</b>
             <ul>
             <li>
-                <a href="https://bartex23.github.io/zadanie/Poczta_Kropacz.html" target="obszar_glowny">Poczta</a>
+                <a href="https://bartex23.github.io/zadania/Poczta_Kropacz.html" target="obszar_glowny">Poczta</a>
             </li>
             <li>
-                <a href="https://bartex23.github.io/zadanie/Formularz_Kropacz.html" target="obszar_glowny" target="obszar_glowny">Formularz</a>
+                <a href="https://bartex23.github.io/zadania/Formularz_Kropacz.html" target="obszar_glowny" target="obszar_glowny">Formularz</a>
             </li>
             <li>
-            <a href="https://bartex23.github.io/zadanie/Tabela_Kropacz.html" target="obszar_glowny" target="obszar_glowny">tabela</a>
+            <a href="https://bartex23.github.io/zadania/Tabela_Kropacz.html" target="obszar_glowny" target="obszar_glowny">tabela</a>
             </li>
             <li>
-                <a href="https://bartex23.github.io/zadanie/Plik_Kropacz.html" target="obszar_glowny">plik</a>
+                <a href="https://bartex23.github.io/zadania/Plik_Kropacz.html" target="obszar_glowny">plik</a>
             </li>
             <li>
-                <a href="https://bartex23.github.io/zadanie/index.html" target="obszar_glowny">strona glowna</a>
+                <a href="https://bartex23.github.io/zadania/index.html" target="obszar_glowny">strona glowna</a>
             </li>
             </ul>
             
