--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                 <a href="http://www.kuratorium.gda.pl" target="obszar_glowny">Kuratorium</a>
              </li>
              <li>
-                 <a href="http://www.zse.gda.pl" target="obszar_glowny">ZSE Gdansk</a>
+                 <a href="https://zse.edu.gdansk.pl/pl" target="obszar_glowny">ZSE Gdansk</a>
              </li>
              <li>
                 <a href="https://www.edu.gdansk.pl" target="obszar_glowny">Gpe</a>
