--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             <b>lewe menu</b>
           <ul>
              <li>
-                <a href="http://www.kuratorium.gda.pl" target="obszar_glowny">Kuratorium</a>
+                <a href="http://www.kuratorium.gda.pl" target="obszar_glowny">kuratorium</a>
              </li>
              <li>
                  <a href="https://zse.edu.gdansk.pl/pl" target="obszar_glowny">ZSE Gdansk</a>
