--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             <b>lewe menu</b>
           <ul>
              <li>
-                <a href="http://www.kuratorium.gda.pl" target="obszar_glowny">kuratorium</a>
+                <a href="http://www.kuratorium.gda.pl" target="obszar_glowny">Kuratorium</a>
              </li>
              <li>
                  <a href="https://zse.edu.gdansk.pl/pl" target="obszar_glowny">ZSE Gdansk</a>
@@ -34,16 +34,16 @@
             <b>prawe menu</b>
             <ul>
             <li>
-                <a href="https://bartex23.github.io/zadania/Poczta_Kropacz.html" target="obszar_glowny">Poczta</a>
-            </li>
-            <li>
-                <a href="https://bartex23.github.io/zadania/Formularz_Kropacz.html" target="obszar_glowny" target="obszar_glowny">Formularz</a>
-            </li>
-            <li>
-            <a href="https://bartex23.github.io/zadania/Tabela_Kropacz.html" target="obszar_glowny" target="obszar_glowny">tabela</a>
-            </li>
-            <li>
                 <a href="https://bartex23.github.io/zadania/Plik_Kropacz.html" target="obszar_glowny">plik</a>
+            </li>
+            <li>
+                <a href="https://bartex23.github.io/zadania/Tabela_Kropacz.html" target="obszar_glowny" target="obszar_glowny">tabela</a>
+            </li>
+            <li>
+            <a href="https://bartex23.github.io/zadania/Formularz_Kropacz.html" target="obszar_glowny" target="obszar_glowny">Formularz</a>
+            </li>
+            <li>
+                <a href="https://bartex23.github.io/zadania/Poczta_Kropacz.html" target="obszar_glowny">Poczta</a>
             </li>
             <li>
                 <a href="https://bartex23.github.io/zadania/index.html" target="obszar_glowny">strona glowna</a>
