--- a/logokropacz.html
+++ b/logokropacz.html
@@ -1,9 +1,9 @@
 <html>
-     <head>
-        <meta charset="utf-8">
-     </head>
-    <body>
-        <h1 align="center">LOGO Kropacz</h1>
-		<p align="center"><b>Gdansk,13-01-2023</b></p>
-    </body>
+<head>
+<meta charset="utf-8">
+</head>
+<body>
+<p align="center"><b>LOGO Kropacz</b></p>
+<p align="center"><b>Gdansk,13-01-2023</b></p>
+</body>
 </html>
