--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <table width=95% border="1" align="center">
     <tr>
         <td colspan="3">
-            <iframe scrolling="no" width=900 height=90 name="obszar_logo" src="logokropacz.html" border="0"></iframe>
+            <iframe scrolling="no" width=100% height=90 name="obszar_logo" src="logokropacz.html" border="0"></iframe>
             </td>
     </tr>
     <tr>
@@ -54,7 +54,7 @@
     </tr>
     <tr>
         <td colspan="3">
-            <iframe scrolling="no" width=900 height=90 name="obszar_stopka" src="stopkakropacz.html" border="0"></iframe>
+            <iframe scrolling="no" width=100% height=90 name="obszar_stopka" src="stopkakropacz.html" border="0"></iframe>
             </td>
     </tr>
 </table>
