--- a/index.html
+++ b/index.html
@@ -32,23 +32,14 @@
         </td>
         <td width=18% align="center">
             <b>prawe menu</b>
-            <ul>
-            <li>
-                <a href="https://bartex23.github.io/zadania/Plik_Kropacz.html" target="obszar_glowny">plik</a>
-            </li>
-            <li>
-                <a href="https://bartex23.github.io/zadania/Tabela_Kropacz.html" target="obszar_glowny" target="obszar_glowny">tabela</a>
-            </li>
-            <li>
-            <a href="https://bartex23.github.io/zadania/Formularz_Kropacz.html" target="obszar_glowny" target="obszar_glowny">Formularz</a>
-            </li>
-            <li>
-                <a href="https://bartex23.github.io/zadania/Poczta_Kropacz.html" target="obszar_glowny">Poczta</a>
-            </li>
-            <li>
-                <a href="https://bartex23.github.io/zadania/index.html" target="obszar_glowny">strona glowna</a>
-            </li>
-            </ul>
+            <map id="mapa_kropacz">
+<area shape="circle" coords="21,6,77,53" href="https://bartex23.github.io/zadania/Plik_Kropacz.html" target="obszar_glowny" title="b">
+<area shape="rect" coords="4,68,91,108" href="https://bartex23.github.io/zadania/Tabela_Kropacz.html" target="obszar_glowny">
+<area shape="circle" coords="17,122,75,174" href="https://bartex23.github.io/zadania/Formularz_Kropacz.html" target="obszar_glowny">
+<area shape="rect" coords="8,188,89,229" href="https://bartex23.github.io/zadania/Poczta_Kropacz.html" target="obszar_glowny">
+<area shape="poly" coords="51,243,82,293,22,292" href="https://bartex23.github.io/zadania/index.html" target="obszar_glowny">
+</map>
+<img src="mapa.gif" alt="tutaj wybieraj linki" usemap="#mapa_kropacz">
             
         </td>
     </tr>
