--- a/index.html
+++ b/index.html
@@ -14,27 +14,36 @@
         <td width=18% align="center">
             <b>lewe menu</b>
           <ul>
-              <li>
+             <li>
                 <a href="http://www.kuratorium.gda.pl" target="obszar_glowny">Kuratorium</a>
              </li>
              <li>
                  <a href="https://zse.edu.gdansk.pl/pl" target="obszar_glowny">ZSE Gdansk</a>
-             </li>   
+             </li>  
+</ul> 
         </td>
         <td align=center>
             <iframe  width=650 height=650 name="obszar_glowny" src="glownykropacz.html" border="0"></iframe>
         </td>
         <td width=18% align="center">
             <b>prawe menu</b>
-            <map id="mapa_kropacz">
-<area shape="circle" coords="21,6,77,53" href="https://bartex23.github.io/zadania/Plik_Kropacz.html" target="obszar_glowny" title="b">
-<area shape="rect" coords="4,68,91,108" href="https://bartex23.github.io/zadania/Tabela_Kropacz.html" target="obszar_glowny">
-<area shape="circle" coords="17,122,75,174" href="https://bartex23.github.io/zadania/Formularz_Kropacz.html" target="obszar_glowny">
-<area shape="rect" coords="8,188,89,229" href="https://bartex23.github.io/zadania/Poczta_Kropacz.html" target="obszar_glowny">
-<area shape="poly" coords="51,243,82,293,22,292" href="https://bartex23.github.io/zadania/index.html" target="obszar_glowny">
-</map>
-<img src="mapa.gif" alt="tutaj wybieraj linki" usemap="#mapa_kropacz">
-            
+             <ul>
+            <li>
+                <a href="https://bartex23.github.io/zadania/Plik_Kropacz.html" target="obszar_glowny">plik</a>
+            </li>
+            <li>
+                <a href="https://bartex23.github.io/zadania/Tabela_Kropacz.html" target="obszar_glowny" target="obszar_glowny">tabela</a>
+            </li>
+            <li>
+            <a href="https://bartex23.github.io/zadania/Formularz_Kropacz.html" target="obszar_glowny" target="obszar_glowny">Formularz</a>
+            </li>
+            <li>
+                <a href="https://bartex23.github.io/zadania/Poczta_Kropacz.html" target="obszar_glowny">Poczta</a>
+            </li>
+            <li>
+                <a href="https://bartex23.github.io/zadania/index.html" target="obszar_glowny">strona glowna</a>
+            </li>
+            </ul>  
         </td>
     </tr>
     <tr>
