--- a/stopkakropacz.html
+++ b/stopkakropacz.html
@@ -3,7 +3,8 @@
         <meta charset="utf-8">
      </head>
     <body>
-        <h1 align="center">stopka Kropacz</h1>
-		<p align="center"><b>Gdansk,13-01-2023</b></p>
+<!-- www.DarmowyLicznik.pl -->
+<div class="image-rotator"><div class="rotator-slide" id="rotator-slide-1"><a href="https://www.darmowylicznik.pl/" title="Przejdź na stronę licznika" target="_blank"><img src="https://www.darmowylicznik.pl/licznik.php?id=146353" alt="Darmowy licznik odwiedzin" style="border:0px;" /></a></div></div>
+<!-- END www.DarmowyLicznik.pl -->
     </body>
 </html>
