--- a/logokropacz.html
+++ b/logokropacz.html
@@ -3,7 +3,6 @@
 <meta charset="utf-8">
 </head>
 <body>
-<p align="center"><b>LOGO Kropacz</b></p>
-<p align="center"><b>Gdansk,13-01-2023</b></p>
+<img src="logo_zadanie_15_kropacz.png" border=1 align=center>
 </body>
 </html>
