--- a/stopkakropacz.html
+++ b/stopkakropacz.html
@@ -3,6 +3,6 @@
         <meta charset="utf-8">
      </head>
     <body>
-<script type="text/javascript" src="//www.licznikodwiedzin.pl/cnt/start.php?key=444615569"></script>
+<script type = "text/javascript" src = "//www.deszczowce.pl/licznik/licznik.php?id=122671325"></script>
     </body>
 </html>
