--- a/index.html
+++ b/index.html
@@ -28,21 +28,14 @@
         <td width=18% align="center">
             <b>prawe menu</b>
              <ul>
-            <li>
-                <a href="https://bartex23.github.io/zadania/Plik_Kropacz.html" target="obszar_glowny">plik</a>
-            </li>
-            <li>
-                <a href="https://bartex23.github.io/zadania/Tabela_Kropacz.html" target="obszar_glowny" target="obszar_glowny">tabela</a>
-            </li>
-            <li>
-            <a href="https://bartex23.github.io/zadania/Formularz_Kropacz.html" target="obszar_glowny" target="obszar_glowny">Formularz</a>
-            </li>
-            <li>
-                <a href="https://bartex23.github.io/zadania/Poczta_Kropacz.html" target="obszar_glowny">Poczta</a>
-            </li>
-            <li>
-                <a href="https://bartex23.github.io/zadania/index.html" target="obszar_glowny">strona glowna</a>
-            </li>
+<map id="mapa_kropacz">
+<area shape="circle" coords="24,14,66,54" href="https://bartex23.github.io/zadania/Plik_Kropacz.html" target="obszar_glowny">
+<area shape="rect" coords="5,67,87,114" href="https://bartex23.github.io/zadania/Tabela_Kropacz.html" target="obszar_glowny">
+<area shape="circle" coords="22,134,66,173" href="https://bartex23.github.io/zadania/Formularz_Kropacz.html" target="obszar_glowny">
+<area shape="rect" coords="1,191,85,235" href="https://bartex23.github.io/zadania/Poczta_Kropacz.html" target="obszar_glowny">
+<area shape="poly" coords="46,245,77,290,15,291" href="https://bartex23.github.io/zadania/index.html" target="obszar_glowny">
+</map>
+<img src="mapa1.gif" alt="tutaj wybieraj linki" usemap="#mapa_kropacz">
             </ul>  
         </td>
     </tr>
