--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="utf-8">
     </head>
+     <link  rel="shortcut icon" href="ikona.ico">
 <body>
 <table width=95% border="1" align="center">
     <tr>
